--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"@typescript-eslint/parser": "^4.26.1",
 		"chai": "^4.2.0",
 		"chai-ethers": "^0.0.1",
-		"cross-env": "^7.0.2",
+		"cross-env": "^7.0.3",
 		"eslint": "^7.28.0",
 		"eslint-config-prettier": "^8.3.0",
 		"ethers": "^5.3.1",
@@ -51,7 +51,7 @@
 	},
 	"scripts": {
 		"clean": "hardhat clean",
-		"build": "hardhat compile",
+		"build": "cross-env NODE_ENV=build hardhat compile",
 		"console": "hardhat console",
 		"coverage": "cross-env HARDHAT_DEPLOY_FIXTURE=true hardhat coverage",
 		"gas": "cross-env REPORT_GAS=true hardhat test",
